xx yyy iii: 0.6.2 Miek <miek@miek.nl>
 * jjj


31 Jul 208: 0.6.1 Miek <miek@miek.nl>
 * Added support for amazon's S3 service: see s3-rdup
   this is not added to rdup-simple and probably never will,
   but examples are given in the manual page on how
   to use it.
 * crawler.c: removed new_dir argument for dir_crawl
   this would test if a directory is new and if so would
   include all the files in it. This did not work properly
   and would result into files being included in the backup, which 
   would otherwise would be skipped when doing an incremental
   (Louis-Dominique Dubeau)
 * debian/ directory erased as rdup is now included in Debian and there 
   are better working builds for Ubuntu on Launchpad
 * Remove translation stuff from Perl utils - Perl 5.10 has a
   problem with the hack I employed. Thanks to Dawid Ciezarkiewicz
   for lending his machine with Arch Linux (and Perl 5.10)
 * Remove the -a flag from rdup and all the utils. Never like this hack anyway.


29 May 2008: 0.6.0 Miek <miek@miek.nl>
 -- 0.6.0 is 0.6.0-rc1 with following tweaks --
 * Fix a bug in which a directory can not be created
   in rdup-snap-link (Louis-Dominique Dubeau)


23 May 2008: 0.6.0-rc1 Miek <miek@miek.nl>
  -- i18n and hardlink support added: default output changed --
 * i18n support added, but nothing is translated yet
   - this is for the perl scripts and the rdup C core
   - shell scripts do not use i18n
 * hardlink support
   - symlink output has also changed to support this
   - each link is printed as 'link -> target'
   - filesize is overloaded to take the length of 'link' in this case
   - hardlinks have the file type 'h'
   - now we have: -, d, l and h types
   New sample output:

    +d 0751 1000 1000 11 0 /home/miekg/bin
    +h 0700 1000 1000 44 21 /home/miekg/bin/acx2 -> /home/miekg/bin/cx
    +h 0700 1000 1000 51 28 /home/miekg/bin/cx-hardlink -> /home/miekg/bin/cx
    +l 0777 1000 1000 24 18 /home/miekg/bin/t -> tt